fixed alignment

--- a/src/css/Detail.css
+++ b/src/css/Detail.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
     margin-top: 100px;
     gap: 170px;
     background-image: 
@@ -22,6 +22,7 @@
     align-items: center;
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 30px;
     gap: 170px;
     margin-bottom: 200px;
     background-image: 
@@ -45,7 +46,6 @@
         flex-direction: column;
         padding-left: 10px;
         padding-right: 10px;
-        padding-top: 100px;
         gap: 30px;
     }
 }
